--- a/markdowneditor/package.json
+++ b/markdowneditor/package.json
@@ -12,6 +12,7 @@
     "react-markdown": "^8.0.3",
     "react-scripts": "5.0.1",
     "remarkable": "^2.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
